--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
-
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>My First Webpage</title>
-  </head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <h1>Hello world</h1>
+        <a href="https://www.theodinproject.com/about">About The Odin Project</a>
+        <p>
+            <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+        </p>
+        <p>
+            <a href = './pages/about.html'>About</a>
+        </p>
+        <div>Hello, World!</div>
+        <div>Hello again!</div>
+        <p>Hi...</p>
+        <div>Okay, bye.</div>
+        <div id="title">My Awesome 90's Page</div>
+        <div class="alert-text">Please agree to our terms of service.</div>
+    </body>
 </html>
